<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@android:color/white">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <RadioGroup
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	 
	        <RadioButton
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txt_rumah_kosong"
	            android:textColor="@android:color/black" 
	            android:drawableLeft="@drawable/radio_button_selector"
	            android:drawablePadding="10dp"
	            android:background="@android:color/transparent"
        		android:button="@null"
	            android:layout_marginBottom="10dp" />
	 
	        <RadioButton
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txt_tanah_kosong" 
	            android:textColor="@android:color/black"
	            android:drawableLeft="@drawable/radio_button_selector"
	            android:background="@android:color/transparent"
        		android:button="@null"
        		android:layout_marginBottom="10dp"
	            android:drawablePadding="10dp"/>
	        
	        <RadioButton
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txt_rumah_rusak" 
	            android:textColor="@android:color/black"
	            android:drawableLeft="@drawable/radio_button_selector"
	            android:background="@android:color/transparent"
        		android:button="@null"
	            android:layout_marginBottom="10dp"
	            android:drawablePadding="10dp"/>
	        
	        <RadioButton
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txt_lainnya" 
	            android:textColor="@android:color/black"
	            android:drawableLeft="@drawable/radio_button_selector"
	            android:background="@android:color/transparent"
        		android:button="@null"
	            android:layout_marginBottom="10dp"
	            android:drawablePadding="10dp"/>
	 
	    </RadioGroup>
        
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2.001"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout 
            android:id="@+id/ll_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/blue">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/button_cancel"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <View 
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0.001"
            android:background="@android:color/white"/>
        <LinearLayout 
            android:id="@+id/ll_button_kirim"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/blue">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/button_kirim"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
