<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_splashscreen"
            android:scaleType="fitXY"
            android:layout_marginBottom="30dp"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/round_corner_up">
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_username"
                android:layout_marginRight="10dp"/>
            <EditText 
                android:id="@+id/et_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:singleLine="true"
                android:background="@null">
                <requestFocus />
            </EditText>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/round_corner_bottom">
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_password"
                android:layout_marginRight="10dp"/>
            <EditText 
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:singleLine="true"
                android:background="@null"/>
        </LinearLayout>
        
        <LinearLayout 
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/button_round_corner">
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/button_login"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:gravity="center"/>
        </LinearLayout>
        
        <TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:text="@string/linktxt_forgot_password"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textColor="@color/blue"
			android:textStyle="bold"
			android:layout_gravity="center"
			android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>

