<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@android:color/white">
    

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <!-- Old Password -->
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/txt_oldpass"
            android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@android:color/black"/>
        
        <EditText 
            android:id="@+id/et_oldpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/edit_text_holo"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@android:color/black"/>
        
        <!-- New Password -->
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/txt_newpass"
            android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@android:color/black"/>
        
        <EditText 
            android:id="@+id/et_newpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/edit_text_holo"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@android:color/black"/>
        
        
        <!-- Confirm Password -->
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/txt_oldpass"
            android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@android:color/black"/>
        
        <EditText 
            android:id="@+id/et_confirmpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/edit_text_holo" 
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@android:color/black"/>
    </LinearLayout>
    
    <LinearLayout 
	    android:id="@+id/ll_button_submit"
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:layout_marginLeft="30dp"
	    android:layout_marginRight="30dp"
	    android:layout_marginBottom="20dp"
	    android:gravity="center"
	    android:background="@color/blue">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/button_submit"
	        android:textColor="@android:color/white"/>
	</LinearLayout>
    
</LinearLayout>
